--- a/index.html
+++ b/index.html
@@ -28,12 +28,19 @@
                 <p>Click Alonzo was the very first snap project we were assigned in AP Computer Science. It’s a game in which you essentially just have to click on the “sprite” until it fades away. This project is important to me because it helped me understand the basics of the snap program.</p>
                 <div class="clear"></div>
                 </div>
-		<div class="project">
-			<img src="IMG/Alonzo Click.jpg" alt="Alonzo Click"/> 
-                <h2>Click Alonzo</h2>
-                <p>Click Alonzo was the very first snap project we were assigned in AP Computer Science. It’s a game in which you essentially just have to click on the “sprite” until it fades away. This project is important to me because it helped me understand the basics of the snap program.</p>
+		 <div class="project">
+			<img src="IMG/pc build.jpg" alt="PC build"/> 
+                <h2>PC build</h2>
+                <p>My pc is one of the best things I have ever invested in. I learned so much about computers in general and it made so many more things easier. It helped me pursue my love for computers further and was fun to build all the way through.</p>
+                <div class="clear"></div>
+                </div>
+      <div class="project">
+		 	 <img src="IMG/python cmu.jpg" alt="python cmu"/> 
+                <h2>Python CMU</h2>
+                <p>For Genius Hour, I chose to do Python CMU. I wanted to learn the basics of Python to further my programming skills and also because I generally enjoy doing it. So far, I have learned basic skills such as making shapes, adding colors, and adding gradients.</p>
                 <div class="clear"></div>
             </div>
+          </div>
         </div>
 </body> 
 </html>
