--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
 
     <h2>About Me</h2>
     <img src="IMG/profile pic.jpg" alt="profile pic" />
-    <p> Blah</p>
+    <p>My name is Roman Hamed. I attend Benicia High School and am 16 years old. I am an enthusiast of computers and programming/cybersecurity. I would like to pursue a career in one of the two paths said prior.</p>
   </div>
 	
 </body>
