--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Roman's project</title>
+	<title>Roman's Website</title>
 	<link href="reset.css" rel="stylesheet" type="text/css" />
 	<link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -39,7 +43,13 @@
                 <h2>Python CMU</h2>
                 <p>For Genius Hour, I chose to do Python CMU. I wanted to learn the basics of Python to further my programming skills and also because I generally enjoy doing it. So far, I have learned basic skills such as making shapes, adding colors, and adding gradients.</p>
                 <div class="clear"></div>
-            </div>
+                </div>
+        <div class="project">
+		  <img src="IMG/Clothing Simulator.jpg" alt="Clothing Simulator"/> 
+                <h2>Drawing App:Clothing Simulator</h2>
+                <p> This app was created by me and my Partner Matthew Lee for the Congressional App Challenge. The website's purpose is to help people find and plan outfit they would like to wear. Creating this game was overall a very fun experience and we learned a lot. </p>
+                <div class="clear"></div>
+                </div>
           </div>
         </div>
 </body> 
