--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<title>Roman's Website</title>
 	<link href="reset.css" rel="stylesheet" type="text/css" />
 	<link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
         <div class="project">
 		  <img src="IMG/Clothing Simulator.jpg" alt="Clothing Simulator"/> 
                 <h2>Drawing App:Clothing Simulator </h2>
-                <p> This app was created by me and my Partner Matthew Lee for the Congressional App Challenge. The website's purpose is to help people find and plan outfit they would like to wear. Creating this game was overall a very fun experience and we learned a lot---snap.berkeley.edu/snap/snap.html#present:Username=inho24&ProjectName=clothing%20project </p>
+                <p> This app was created by me and my Partner Matthew Lee for the Congressional App Challenge. The website's purpose is to help people find and plan outfit they would like to wear. Creating this game was overall a very fun experience and we learned a lot--->snap.berkeley.edu/snap/snap.html#present:Username=inho24&ProjectName=clothing%20project </p>
                 <div class="clear"></div>
                 </div>
           </div>
