--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<title>Roman's Website</title>
 	<link href="reset.css" rel="stylesheet" type="text/css" />
 	<link href="style.css" rel="stylesheet" type="text/css" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -18,9 +18,14 @@
 		<h1> Roman's Website</h1>
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html">Ap CS Projects</a></li>
 				<li>|</li>
 				<li><a href="aboutme.html">About Me</a></li>
+        <li>|</li>
+        <li><a href="3D Printing.html">3D Printing</a></li>
+         <li>|</li>
+				<li><a href="Robot Arm.html">Robot Arm</a></li>
+        	
 			</ul>
 		</nav>
 	</header>
@@ -47,7 +52,13 @@
         <div class="project">
 		  <img src="IMG/Clothing Simulator.jpg" alt="Clothing Simulator"/> 
                 <h2>Drawing App:Clothing Simulator </h2>
-                <p> This app was created by me and my Partner Matthew Lee for the Congressional App Challenge. The website's purpose is to help people find and plan outfit they would like to wear. Creating this game was overall a very fun experience and we learned a lot--->snap.berkeley.edu/snap/snap.html#present:Username=inho24&ProjectName=clothing%20project </p>
+                <p> This app was created by me and my Partner Matthew Lee for the Congressional App Challenge. The website's purpose is to help people find and plan outfit they would like to wear. Creating this game was overall a very fun experience and we learned a lot---snap.berkeley.edu/snap/snap.html#present:Username=inho24&ProjectName=clothing%20project </p>
+                <div class="clear"></div>
+        </div>
+          <div class="project">
+		  <img src="IMG/frank ocean song player.jpg" alt="Frank Ocean Song Player"/> 
+                <h2>Frank Ocean Music Player</h2>
+                <p> This is another app created by me and my partner Matthew Lee. We made this project to give people a taste of one of favorite artist, Frank Ocean. The app itself plays and shuffles a few of our favorite Frank Ocean Songs.  </p>
                 <div class="clear"></div>
                 </div>
           </div>
