--- a/aboutme.html
+++ b/aboutme.html
@@ -14,9 +14,13 @@
 		<h1>Roman's Website</h1>
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html">Ap CS Projects</a></li>
 				<li>|</li>
 				<li><a href="aboutme.html">About Me</a></li>
+        <li>|</li>
+				<li><a href="3D Printing.html">3D Printing</a></li>
+        <li>|</li>
+				<li><a href="Robot Arm.html">Robot Arm</a></li>
 			</ul>
 		</nav>
 	</header>
